playground/jenkins/svc-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins
  type: LoadBalancer
  externalIPs:
  - 182.252.181.56
