playground/jenkins/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: jenkins
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
